acceptance/orchestration-backend/orchestration-backend-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: dissco-orchestration-backend-service
spec:
  selector:
    app: dissco-orchestration-backend
  ports:
    - protocol: TCP
      port: 8080
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dissco-orchestration-backend-route
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`acc-orchestration.dissco.tech`) && PathPrefix(`/api/v1`)
      kind: Rule
      services:
        - name: dissco-orchestration-backend-service
          namespace: default
          port: 8080
      middlewares:
        - name: dissco-orchestration-backend-stripprefix
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: dissco-orchestration-backend-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /api/v1
    forceSlash: false
